--- a/README
+++ b/README
@@ -7,6 +7,7 @@ usage:
   2. run 'run.sh'
 
 note:
+  this script connect to uis with https (safe) and connect to pt with http (unsafe)
   if you get 'bind pt with tac verification ... failed' again and again,
   it may has wget error 'ERROR: The certificate of `tac.fudan.edu.cn' is not trusted.',
-  try add '--no-check-certificate' to wget options in 'pt_bind.sh'
+  try add '--no-check-certificate' to wget options in 'pt_bind.sh' (unsafe)
