--- a/README
+++ b/README
@@ -8,6 +8,10 @@ usage:
 
 note:
   this script connect to uis with https (safe) and connect to pt with http (unsafe)
+
+  sometimes ipv6 of fudan servers might have some problems,
+  add '-4' option to wget options in all shell scripts might solve this problem
+
   if you get 'bind pt with tac verification ... failed' again and again,
   it may has wget error 'ERROR: The certificate of `tac.fudan.edu.cn' is not trusted.',
   try add '--no-check-certificate' to wget options in 'pt_bind.sh' (unsafe)
